Google Analytics Added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-142100413-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-142100413-1');
+  </script>
+
   <title>Emmanuel Joseph (Jet)</title>
   <link rel="canonical" href="https://emmanueljet.me" />
   <meta name="robots" content="index, follow">
