Google Products Added

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
   <title>Emmanuel Joseph (Jet)</title>
   <link rel="canonical" href="https://emmanueljet.me" />
   <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow" />
+  <meta name="google" content="notranslate" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="title" content="Emmanuel Joseph (Jet) - Software Developer">
-  <meta name="keywords" content="The Soft Company NG, Codeconia, Codenonics, Codenonia Codecamp Series, Emmanuel Joseph (Jet), Flutter For Web, Flutter Developer, Emmanuel Joseph, emmanueljet, Ekiti State Univerisity, Software Developer, Techhub Eksu, GCDC Ado-Ekiti, GDG EKSU, DSC EKSU">
+  <meta name="keywords" content="emmanueljet, The Soft Company NG, Codeconia, Codenonics, Codenonia Codecamp Series, Emmanuel Joseph (Jet), Flutter For Web, Flutter Developer, Emmanuel Joseph, emmanueljet, Ekiti State Univerisity, Software Developer, Techhub Eksu, GCDC Ado-Ekiti, GDG EKSU, DSC EKSU">
   <meta name="description" content="Emmanuel Joseph (Jet) is a software developer with Laravel and Flutter Skills, slide in to see my works and contact me 😉">
 
   <!-- Google -->
@@ -38,7 +40,7 @@
   <meta name="twitter:title" content="Emmanuel Joseph (Jet)">
   <meta name="twitter:description" content="Emmanuel Joseph (Jet) is a software developer with Laravel and Flutter Skills, slide in to see my works and contact me 😉">
   <meta name="twitter:image:src" content="https://emmanueljet.me/assets/favicon/apple-touch-icon.png">
-  <meta name="twitter:creator" content="@emmanuelJet_">
+  <meta name="twitter:site" content="@emmanuelJet_">
   
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <link href="assets/fonts/mdi/css/materialdesignicons.min.css" media="all" rel="stylesheet" />
@@ -46,6 +48,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/favicon/site.webmanifest">
+  
   <link rel="stylesheet" href="assets/style/style.css">
   
   <script src="assets/ajax/libs/prefixfree/1-0-7/prefixfree.min.js"></script>
@@ -55,6 +58,22 @@
   <script src="assets/scripts/pt.min.js"></script>
   <script src="assets/scripts/index.js"></script>
   <script src="assets/scripts/modal.js"></script>
+
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Emmanuel Joseph (Jet)",
+      "url": "https://emmanueljet.me",
+      "sameAs": [
+        "https://www.facebook.com/emmanueljosephjet",
+        "https://twitter.com/emmanuelJet_",
+        "http://linkedin.com/in/jet774",
+        "https://t.me/emmanueljet",
+        "https://wa.me/2349064847962"
+      ]
+    }
+    </script>
 </head>
 <body>
 <div class="overflow-wrap">
