--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="title" content="Emmanuel Joseph (Jet) - Software Developer">
+  <meta name="publicKey" content="ak_rLoCtHE3NK9dKyCNonJFYWkEEfeAsDUWa887GsCKqV1rhSuT6">
   <meta name="keywords" content="emmanueljet, The Soft Company NG, Codeconia, Codenonics, Codenonia Codecamp Series, Emmanuel Joseph (Jet), Flutter For Web, Flutter Developer, Emmanuel Joseph, emmanueljet, Ekiti State Univerisity, Software Developer, Techhub Eksu, GCDC Ado-Ekiti, GDG EKSU, DSC EKSU">
   <meta name="description" content="Emmanuel Joseph (Jet) is a software developer with Laravel and Flutter Skills, slide in to see my works and contact me 😉">
 
