--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="title" content="Emmanuel Joseph (Jet) - Software Developer">
   <meta name="publicKey" content="ak_rLoCtHE3NK9dKyCNonJFYWkEEfeAsDUWa887GsCKqV1rhSuT6">
+  <meta name="aens" content="emmanueljet.chain">
   <meta name="keywords" content="emmanueljet, The Soft Company NG, Codeconia, Codenonics, Codenonia Codecamp Series, Emmanuel Joseph (Jet), Flutter For Web, Flutter Developer, Emmanuel Joseph, emmanueljet, Ekiti State Univerisity, Software Developer, Techhub Eksu, GCDC Ado-Ekiti, GDG EKSU, DSC EKSU">
   <meta name="description" content="Emmanuel Joseph (Jet) is a software developer with Laravel and Flutter Skills, slide in to see my works and contact me 😉">
 
@@ -72,6 +73,7 @@
         "http://linkedin.com/in/jet774",
         "https://t.me/emmanueljet",
         "https://wa.me/2349064847962", 
+        "emmanueljet.chain", 
         "ak_rLoCtHE3NK9dKyCNonJFYWkEEfeAsDUWa887GsCKqV1rhSuT6"
       ]
     }
@@ -186,7 +188,7 @@
             <br>
             I have serious passion for web, and mobile.
             <br>
-            <span class="page-link highlight" dest="contact">Let's make something special.</span>
+            <span class="page-link highlight" dest="contact">Let's make something special.<br>emmanueljet.chain</span>
           </div>
         </div>
         <div class="flex flex-50-gt-sm waypoint bars-wrap"  data-animation="slide-in-right">
